infra/config/cilium/hubble/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: kube-system
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: http
  hostnames:
    - hubble.minikube
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
  namespace: kube-system
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: https
  hostnames:
    - hubble.minikube
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
